# fika

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/data/: NyX.ipynb
fika/: analysis.py
fika/config/: config_init.py
fika/feature_engineering/: feature.py  text.py
fika/model_analysis/: classification_model_analysis.py  model_analysis.py
fika/modelling/: __init__.py  classification_models.py  model.py  regression_models.py  text.py  unsupervised_models.py  util.py
fika/preprocessing/: __init__.py  numeric.py  text.py
fika/stats/: __init__.py  util.py
fika/templates/: template_generator.py
fika/visualizations/: __init__.py
nija/: __init__.py  analysis.py  cli.py  helpers.py
nija/cleaning/: categorical.py  clean.py  numeric.py
nija/config/: user_config.py
nija/feature_engineering/: feature.py
nija/model_analysis/: __init__.py  constants.py  model_explanation.py  regression_model_analysis.py  unsupervised_model_analysis.py
nija/modelling/: model.py  util.py
nija/preprocessing/: numeric.py  preprocess.py
nija/stats/: stats.py
nija/templates/: util.py
nija/visualizations/: visualizations.py  visualize.py
nox/: util.py
nox/cleaning/: categorical.py  clean.py  numeric.py  util.py
nyx/: __init__.py  analysis.py  cli.py  helpers.py
nyx/cleaning/: __init__.py  categorical.py  clean.py  numeric.py
nyx/config/: __init__.py  config.py  config.yml  config_init.py  user_config.py
nyx/modelling/: model.py  (+6 more)
tests/: test_nox.py  test_nyx.py
(+20 files in other folders)
