[tool.poetry]
name = "nyx"
version = "0.1.0"
description = ""
authors = ["Karthik Bhaskar <karthikrajabk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
interpret = "^0.2.4"
pandas-summary = "^0.0.7"
spacy = "^3.0.6"
pandas-profiling = "2.8.0"
nltk = "^3.6.2"
gensim = "^4.0.1"
pandas = "1.2.3"
numpy = "1.19.5"
matplotlib = "^3.4.2"
textblob = "^0.15.3"
scikit-learn = "^0.24.2"
statsmodels = "^0.12.2"
swifter = "^1.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
